# restful-rust

./: Cargo.toml  LICENSE  README.md  post.db  posts.db
src/: error.rs  handler.rs  main.rs  model.rs  repository.rs  router.rs
