[package]
name = "restful-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.1.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
