[package]
name = "restful-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.1.0"
env_logger = "0.10.0"
log = "0.4.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
